Bug 476467 "###!!! ASSERTION: child count gone negative:" when sending unsent email. r/sr=bienvenu